# Reflector-Calibration

./: .gitignore  README.md
intern_ws/src/calibration/: CMakeLists.txt  package.xml
intern_ws/src/calibration/bags/: obs2.bag  obs3.bag  ref_1111.bag  ref_707.bag  scan_data_1231.csv  scan_data_520.csv  scan_data_575.csv  scan_data_916.csv
intern_ws/src/calibration/cfg/: calibration.cfg
intern_ws/src/calibration/config/: calibration.yaml
intern_ws/src/calibration/launch/: calibration.launch  collectData.launch
intern_ws/src/calibration/msg/: Cluster.msg  PointArray.msg
intern_ws/src/calibration/rviz/: data.rviz  task.rviz
intern_ws/src/calibration/scripts/: binseg.py  binsegBag.py  binsegNode.py  cleanBag.py  csv_dataNode.py  deleteBsBags.py  processBag.py
intern_ws/src/calibration/src/: averager.cpp  binseg.py  circle_fit.py  cluster.py  csv_data.py  dbscan.py  feature.py  pose.py  reflector_coordinate.py  scan_data.csv  test.py
intern_ws/src/calibration/test_bags/: bs_exp_1041.bag  bs_exp_1091.bag  bs_exp_1116.bag  bs_exp_1141.bag  bs_exp_1191.bag  bs_exp_1240.bag  bs_exp_129.bag  bs_exp_1290.bag  bs_exp_1350.bag  bs_exp_1400.bag  bs_exp_1405.bag  bs_exp_1410.bag  bs_exp_1420.bag  bs_exp_1430.bag  bs_exp_144.bag  bs_exp_1440.bag  bs_exp_1450.bag  bs_exp_1500.bag  bs_exp_154.bag  bs_exp_1550.bag  bs_exp_1600.bag  bs_exp_162.bag  bs_exp_1650.bag  bs_exp_1700.bag  bs_exp_1750.bag  bs_exp_178.bag  bs_exp_1780.bag  bs_exp_180.bag  bs_exp_1830.bag  bs_exp_1880.bag  bs_exp_194.bag  bs_exp_1950.bag  bs_exp_2000.bag  bs_exp_2010.bag  bs_exp_2020.bag  (+56 more)
(+28 files in other folders)
